<resources>
    <string name="app_name">Day 2</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Don\'t Have an Account?\n\nSign Up</string>
    <string name="title">Foodie App</string>
    <string name="change_layout">Click Here To Change Layout</string>
</resources>
